--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <body>
         <h1><b>যুক্তরাষ্ট্রের সাথে শুল্ক আলোচনায় সফলতা <br> কূটনৈতিক বিজয় : প্রধান উপদেষ্টা</b></h1>
         <h2><hr>তিনি ঐতিহাসিক এ বাণিজ্য চুক্তি বাংলাদেশের জন্য কূটনৈতিক বিজয় বলে মন্তব্য করেছেন।</h2>
-         <a href="https://dailynayadiganta.com/sources/naya-diganta-online/"> <img src="./the-daily-naya-diganta.jpg" alt="" width="65"></a>
+         <a href="https://dailynayadiganta.com/sources/naya-diganta-online/"> <img src="the-daily-naya-diganta.jpg" alt="" width="65"></a>
          <p>প্রকাশ : শুক্রবার ১ আগস্ট ২০২৫, ১০:২৭</p>
          <hr>
-         <a href="https://www.facebook.com/sharer/sharer.php?u=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="./facebook-logo-icon-social-media-icon-free-png.webp" alt="" width="50px"></a>
-        <a href="https://twitter.com/intent/tweet?url=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="./1690643591twitter-x-logo-png.png" alt="" width="50px"></a>
-        <a href="https://wa.me/?text=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="./whatsapp-logo-icon-free-png.webp" alt="" width="50px"></a>
+         <a href="https://www.facebook.com/sharer/sharer.php?u=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="facebook.jpg" alt="" width="50px"></a>
+        <a href="https://twitter.com/intent/tweet?url=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="x.jpg" alt="" width="50px"></a>
+        <a href="https://wa.me/?text=https://dailynayadiganta.com/bangladesh/national/bqBPXFYB2j2m?_gl=1*11ciurw*_ga*Mjc2OTcwMDE5LjE3NTQwMzUyMjc.*_ga_YZZ0YNB0BF*czE3NTQwMzUyMjckbzEkZzAkdDE3NTQwMzUyMjckajYwJGwwJGgw"><img src="whatsapp.jpg" alt="" width="50px"></a>
         <hr>
-        <img src="./dr-younus_Vhri6By.jpg" alt="" width="700px">
+        <img src="dr-younus_Vhri6By.jpg" alt="" width="700px">
         <p>যুক্তরাষ্ট্রের সাথে শুল্ক আলোচনায় ঐতিহাসিক সফলতা অর্জনের জন্য বাংলাদেশী আলোচক দলের প্রতি অভিনন্দন জানিয়েছেন প্রধান উপদেষ্টা অধ্যাপক ড. মুহাম্মদ ইউনূস।<br> তিনি ঐতিহাসিক এ বাণিজ্য চুক্তি বাংলাদেশের জন্য কূটনৈতিক বিজয় বলে মন্তব্য করেছেন।</p>
         <p>শুক্রবার (১ আগস্ট) সকালে নিজের ভেরিফায়েড ফেসবুক আইডিতে দেয়া এক পোস্টে প্রধান উপদেষ্টার তাৎক্ষণিক প্রতিক্রিয়া তুলে ধরেন প্রেস সচিব শফিকুল আলম।
 
